--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.Caloriediary"
         tools:targetApi="31">
         <activity
+            android:name=".AddFoodActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".InputPersonalDataActivity"
             android:exported="false">
         </activity>
