--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,24 +13,26 @@
         android:theme="@style/Theme.Caloriediary"
         tools:targetApi="31">
         <activity
-            android:name=".InputPersonalDataActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".SignUpActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:exported="false">
-        </activity>
-        <activity
-            android:name=".MainActivity"
+            android:name=".SearchFoodActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".InputPersonalDataActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
         </activity>
     </application>
 
