--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,7 @@
         android:theme="@style/Theme.Caloriediary"
         tools:targetApi="31">
         <activity
-            android:name=".SearchFoodActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".EditProfileActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".AddFoodActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".InputPersonalDataActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".SignUpActivity"
+            android:name=".SplashActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,11 +21,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".SearchFoodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".AddFoodActivity"
             android:exported="false"/>
         <activity
+            android:name=".InputPersonalDataActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
-            android:exported="false"/>
+            android:exported="false" />
     </application>
 
 </manifest>
